# ICP

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  script.sh
src/green_gauge_backend/: Cargo.toml  green_gauge_backend.did
src/green_gauge_backend/src/: lib.rs
src/green_gauge_frontend/: index.html  package.json  tailwind.config.js  vite.config.js
src/green_gauge_frontend/public/: index.html
src/green_gauge_frontend/src/: About.jsx  Alerts.jsx  App.css  App.jsx  CarbonDashboard.jsx  ContactUs.jsx  Dashboard.jsx  Footer.jsx  Hero.jsx  Home.jsx  Login.jsx  LoginRedirect.jsx  Logout.jsx  MailVerification.jsx  NavigationBar.jsx  PrivacyPolicy.jsx  Profile.jsx  ProtectedRoute.jsx  ResetPassword.jsx  SidebarWithModal.jsx  Signup.jsx  TermsConditions.jsx  backendActor.js  index.js  index.jsx  main.jsx  settings.jsx  sidebar.jsx  thresholdcontext.jsx
src/green_gauge_frontend/src/components/: EmissionForm.jsx  NavBar.jsx  TokenReward.jsx  TradeList.jsx  TradeOfferForm.jsx  UserProfile.jsx
src/green_gauge_frontend/src/pages/: AdminDashboard.jsx  CarbonMarket.jsx  Dashboard.jsx  Home.jsx  Login.jsx  Registration.jsx
src/green_gauge_frontend/src/services/: api.js  auth.js
src/green_gauge_frontend/src/styles/: AdminDashboard.css  App.css  CarbonMarket.css  Dashboard.css  EmissionForm.css  Home.css  Login.css  NavBar.css  Registration.css  TokenReward.css  TradeList.css  TradeOfferForm.css  UserProfile.css
src/green_gauge_frontend/src/utils/: dateUtils.js
